added the filter,sorting icon and sort menu items and icons

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -16,6 +16,12 @@
 }
 
 
+.created{
+    font-size: 12px;
+    color: #cecccc;
+    margin-bottom: 6px;
+}
+
 .buttons{
     display: flex;
     flex-direction: row;
